working well with video pipeline

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "fastapi[standard]>=0.119.0",
     "google-genai>=1.43.0",
+    "json-repair>=0.52.3",
     "passlib[bcrypt]>=1.7.4",
     "pdfplumber>=0.11.7",
     "pydantic>=2.12.0",
